Logix changes related to delete and testing for loop possibility

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -190,6 +190,9 @@ Error36 = Sorry, cannot add more Conditionals to this Logix;\n it has the maximu
 Error37 = Sorry, cannot add more state variables to this conditional;\n it has the maximum allowed.
 
 WarnTitle = Warning
+ButtonYes = Delete
+ButtonNo = Cancel Delete
+ButtonYesPlus = Delete - Stop Warnings
 Warn1 = The last Conditional has been deleted from this Logix.
 Warn2 = A Logix must have at least one Conditional to do anything useful.
 Warn3 = The last State Variable has been deleted from this Conditional.\nA Conditional must have at least one State Variable to do anything useful.
@@ -198,3 +201,4 @@ Warn6 = Warning - A change in the {0} of {1} {2} will trigger calculation of thi
 # Warn7 is inserted as {2} in Warn6 when the item being warned about 
 # is a SignalHead, or otherwise has a specific value as part of the trigger.
 Warn7 = to or from {0}
+Warn8 = Are you sure you want to delete this Logix? All your work in defining it will be lost.
