--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -193,6 +193,9 @@ WarnTitle = Warning
 ButtonYes = Delete
 ButtonNo = Cancel Delete
 ButtonYesPlus = Delete - Stop Warnings
+ButtonDisabled = Continue Disabled
+ButtonEnabled = Continue Enabled
+Logix = Logix
 Warn1 = The last Conditional has been deleted from this Logix.
 Warn2 = A Logix must have at least one Conditional to do anything useful.
 Warn3 = The last State Variable has been deleted from this Conditional.\nA Conditional must have at least one State Variable to do anything useful.
@@ -202,3 +205,5 @@ Warn6 = Warning - A change in the {0} of {1} {2} will trigger calculation of thi
 # is a SignalHead, or otherwise has a specific value as part of the trigger.
 Warn7 = to or from {0}
 Warn8 = Are you sure you want to delete this Logix? All your work in defining it will be lost.
+Warn9 = Conditions exist that could result in a logic loop. \n The following both trigger this Logix and are changed by it:\n
+Warn10 = was disabled as requested.\nPlease remember to enable it later.
