complete set of NamedBean subclass states

--- a/jmri/NamedBeanBundle.properties
+++ b/jmri/NamedBeanBundle.properties
@@ -1,11 +1,20 @@
 # NamedBeanBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties decribing states of the various types of NamedBeans
 
 BeanStateInconsistent = Inconsistent
 BeanStateUnknown = Unknown
+
+BeanNameTurnout     = Turnout
+BeanNameSensor      = Sensor
+BeanNameSignalHead  = Signal Head
+BeanNameMemory      = Memory
+BeanNameReporter    = Reporter
+BeanNameLight       = Light
+BeanNameLogix       = Logix
+BeanNameRoute       = Route
 
 LightStateOff = Off
 LightStateOn = On
@@ -23,3 +32,4 @@ SignalHeadStateDark = Dark
 SignalHeadStateFlashingRed = Flashing Red
 SignalHeadStateFlashingYellow = Flashing Yellow
 SignalHeadStateFlashingGreen = Flashing Green
+SIgnalHeadStateHeld = Held
