--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for the jmrit.display package
 
@@ -45,3 +45,10 @@ CheckBoxEditable    = Panel items popup menus active
 CheckBoxPositionable = Panel items can be repositioned
 CheckBoxControlling = Panel items control layout
 CheckBoxMenuBar     = Panel has menu
+
+TitleChangeIcon     = Change Icon
+TitleChangeIcons    = Change {0} Icons
+
+LabelSelectFile     =   Select new file, then click on icon to change  
+LabelEditor         = Editor
+LabelInputError     = Input Error
