refactor delete code, deletion warning

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.20 $
+# Revision $Revision: 1.21 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -112,7 +112,8 @@ Reminder1 = Please remember to save your Lights to disk.  (Select
 Reminder2 = 'Store Configuration...' in File menu of Light Table.)
 ReminderTitle = Reminder
 
-ReminderInUse = \"{0}\" was in use by {1} other objects.\nCheck for error messages when you next \nreload the configuration.
+ReminderInUse = It is in use by {1} other objects.
+DeletePrompt = Are you sure you want to delete {0}?
 
 WarningTitle = Warning
 
