--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -29,4 +29,6 @@ MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
 MenuItemFirmwareUpdate = Firmware Update
 MenuItemMacroCommand = Send Macro
+MenuItemMacroEdit = Edit Macro
+MenuItemTrackPacketMonitor = Track Packet Monitor
 
