SDF handles now use buffer

--- a/jmri/jmrix/loconet/soundloader/Editor.properties
+++ b/jmri/jmrix/loconet/soundloader/Editor.properties
@@ -1,6 +1,6 @@
 # Editor.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # Copyright 2005, 2006 Bob Jacobsen
 #
 #
@@ -23,6 +23,7 @@ HeaderREPLACEBUTTONCOL =
 ButtonPlay = Play
 ButtonView = View
 ButtonReplace = Replace
+ButtonEdit = Edit
 ButtonOpen = Open File ...
 ButtonSave = Save File ...
 
