contributed by Kem Cameron

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -31,4 +31,5 @@ MenuItemFirmwareUpdate = Firmware Update
 MenuItemMacroCommand = Send Macro
 MenuItemMacroEdit = Edit Macro
 MenuItemTrackPacketMonitor = Track Packet Monitor
+MenuItemClockMon = Monitor Clock
 
