add tooltip to explain why add buttons disabled

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for the jmrit.display package
 
@@ -52,3 +52,5 @@ TitleChangeIcons    = Change {0} Icons
 LabelSelectFile     =   Select new file, then click on icon to change  
 LabelEditor         = Editor
 LabelInputError     = Input Error
+
+ToolTipWillActivate = This button will be active after you fill in the text box
