add RPS entries

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -52,3 +52,9 @@ jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
+
+jmri.jmrix.rps.rpsmon.RpsMonAction      = Open RPS Monitor
+jmri.jmrix.rps.display.DisplayAction    = Open RPS Calculations Display
+jmri.jmrix.rps.DataSourceAction         = Open RPS Connection
+jmri.jmrix.rps.RpsTrackingFrameAction   = Open RPS Tracking Display
+jmri.jmrix.rps.AlignmentPanelAction     = Open RPS Alignment Tool
