Add new NCE feature, edit, backup, and restore consists

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -30,6 +30,7 @@ MenuItemSendCommand = Send Command
 MenuItemFirmwareUpdate = Firmware Update
 MenuItemMacroCommand = Send Macro
 MenuItemMacroEdit = Edit Macro
+MenuItemConsistEdit = Edit Consist
 MenuItemTrackPacketMonitor = Track Packet Monitor
 MenuItemClockMon = Monitor Clock
 
