--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.3 $ -->
+<!-- Revision $Revision: 1.4 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -21,15 +21,15 @@
   <property name="jartarget" value=".."/>
   
   <path id="project.class.path">
-    <pathelement location="../lib/collections.jar" />
     <pathelement location="../lib/crimson.jar" />
     <pathelement location="../lib/comm.jar" />
-    <pathelement location="../lib/jdom-jdk11.jar" />
+    <pathelement location="../lib/jdom.jar" />
     <pathelement location="../lib/log4j.jar" />
-    <pathelement location="../lib/jh.jar" />
+    <pathelement location="../lib/jhall.jar" />
     <pathelement location="../lib/Serialio.jar" />
     <pathelement location="../lib/junit.jar" />
     <pathelement location="../lib/jython.jar" />
+    <pathelement location="../lib/javacsv.jar" />
     <pathelement location="../lib/MRJAdapter.jar" />
     <pathelement location="classes/" />
   </path>
