--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Default properties for the jmrit.display package
 
@@ -54,3 +54,5 @@ LabelEditor         = Editor
 LabelInputError     = Input Error
 
 ToolTipWillActivate = This button will be active after you fill in the text box
+ToolTipTurnout		= Enter turnout number, typically 1 - 2044, or turnout User Name, or internal turnout ITnnn
+ToolTipSignalHead	= Create signal using the Signal Table before adding to panel
