Add user entry of pulse width for CMRI pulsed turnout control

--- a/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle.properties
+++ b/jmri/jmrix/cmri/serial/nodeconfig/NodeConfigBundle.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.cmri.serial.nodeconfig window
 
@@ -9,13 +9,16 @@ WindowTitle    = Configure C/MRI Nodes
 BoxLabelNotes  = Notes
 
 LabelCardSize       = Card Size:
-LabelNodeAddress    = Node Address (UA):
+LabelNodeAddress    = Node Address (UA) :
 LabelNodeType       = Node Type:
-LabelDelay          = Receive Delay (DL):
+LabelDelay          = Receive Delay (DL) :
+LabelPulseWidth     = Pulse Width:
+LabelMilliseconds   = (milliseconds)
 
 TipNodeAddress      = Enter node address, numbering from 0.
 TipNodeType         = Select type of C/MRI node.
 TipDelay            = Delay between receive bytes (10 microsec units), normally 0.
+TipPulseWidth       = Width of pulse for pulsed turnout control (100 to 10000 allowed).
 TipCardSize         = Select number of bits per card.
 TipAddButton        = Add a new node
 TipEditButton       = Edit an existing node
@@ -84,6 +87,9 @@ Error12   = This is a C/MRI design requirement.
 Error13   = Error - USIC_SUSIC must have at least one Input or Output Card.
 Error14   = Please configure Input and Output Cards and try again.
 Error15   = Error - USIC_SUSIC cards must be either 24-bit or 32-bit.
+Error16   = Error - Pulse width must be at least 100, please try again.
+Error17   = Error - Pulse width must be less than 10000, please try again.
+Error18   = Error - Bad character in Pulse Width, please try again.
 
 FeedBackAdd     = C/MRI Node added. Node Address =
 FeedBackDelete  = C/MRI Node deleted. Node Address =
