Change the way panels are deleted and add new LayoutEditor type panels

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Default properties for the jmrit.display package
 
@@ -14,12 +14,24 @@ MenuFile      = File
 MenuItemNew   = New panel...
 MenuItemLoad  = Load panels...
 MenuItemStore = Store panels...
+MenuShowPanel = Show Panel
+OpenEditor = Open editor
+DeletePanel = Delete this panel...
 
 MenuItemScript = Run script...
 
 MenuItemMonitor = Thread Monitor
 MenuItemScriptLog = Script Output
 MenuItemScriptInput = Script Entry
+
+# editor choice items
+ChooseEditor = Choose Editor
+ChoiceText1 = Please choose an editor for your new panel.
+ChoiceText2 = Click 'Panel Editor' for the traditional PanelPro editor.
+ChoiceText3 = Click 'Layout Editor' for the newer drawing editor.
+PanelEditor = Panel Editor
+LayoutEditor = Layout Editor
+Cancel = Cancel
 
 # labels, etc
 ButtonAddBkg        = Pick background image...
@@ -55,4 +67,11 @@ LabelInputError     = Input Error
 
 ToolTipWillActivate = This button will be active after you fill in the text box
 ToolTipTurnout		= Enter turnout number, typically 1 - 2044, or turnout User Name, or internal turnout ITnnn
-ToolTipSignalHead	= Create signal using the Signal Table before adding to panel
+ToolTipSignalHead	= Create signal using the Signal Table before adding to panel>>>>>>> 1.10
+
+# delete panel validation items
+DeleteVerifyTitle = Verify Delete
+ButtonYesDelete = Yes - Delete 
+ButtonNoCancel = No - Cancel
+QuestionA = Are you sure you want to delete this panel, and all displayed icons and track objects?
+QuestionB = (If this panel was loaded, to permanently delete it, select Store Panels... in the Panel menu.)=======
