Not sure how or why the characters " >>>>>>1.10" were added to the tool tip, but removed them anyways.

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Default properties for the jmrit.display package
 
@@ -67,7 +67,7 @@ LabelInputError     = Input Error
 
 ToolTipWillActivate = This button will be active after you fill in the text box
 ToolTipTurnout		= Enter turnout number, typically 1 - 2044, or turnout User Name, or internal turnout ITnnn
-ToolTipSignalHead	= Create signal using the Signal Table before adding to panel>>>>>>> 1.10
+ToolTipSignalHead	= Create signal using the Signal Table before adding to panel
 
 # delete panel validation items
 DeleteVerifyTitle = Verify Delete
