New panel editor feature, display x and y coordinates in  item's  popup menu

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Default properties for the jmrit.display package
 
@@ -55,6 +55,7 @@ LabelY              = y:
 
 CheckBoxEditable    = Panel items popup menus active
 CheckBoxPositionable = Panel items can be repositioned
+CheckBoxShowCoordinates = Show item's coordinates in popup memu 
 CheckBoxControlling = Panel items control layout
 CheckBoxMenuBar     = Panel has menu
 
