Fix spelling error.  I should wear my reading glasses!

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Default properties for the jmrit.display package
 
@@ -55,7 +55,7 @@ LabelY              = y:
 
 CheckBoxEditable    = Panel items popup menus active
 CheckBoxPositionable = Panel items can be repositioned
-CheckBoxShowCoordinates = Show item's coordinates in popup memu 
+CheckBoxShowCoordinates = Show item's coordinates in popup menu 
 CheckBoxControlling = Panel items control layout
 CheckBoxMenuBar     = Panel has menu
 
