--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.8 $ -->
+<!-- Revision $Revision: 1.9 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -31,7 +31,7 @@
   <property name="test" value="test"/>
   <property name="target" value="classes"/>
   <property name="jartarget" value=".."/>
-  <property name="doctarget" value=".."/>
+  <property name="doctarget" value="doc"/>
   
   <path id="project.class.path">
     <pathelement location="../lib/crimson.jar" />
