Improve Layout Editor drawing and correct minor bugs.

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -146,8 +146,8 @@ ScaleTranslate = Scale/Translate
 ScaleTranslateHint = Click here to translate and/or scale the track diagram.
 
 # help area items
-Help1 = Select item type, enter info, then shift-click to add - except Track Segment.
-Help2 = To add a Track Segment, press mouse with shift down on one point and drag to other point.
+Help1 = To add an item, check item type, enter needed data, then, with shift down, click on panel - except Track Segment.
+Help2 = To add a Track Segment, with shift down press mouse on one connection point and drag to another connection point.
 Help3 = To move an item, drag it with meta key pressed. To see an item's popup menu, alt-click on it.
 Help3Mac = To move an item, drag it with the command key pressed. To show its popup menu, control-click on it.
 Help3Win = To move an item, drag it with the right mouse button. To show its popup menu, right-click on it.
@@ -192,7 +192,7 @@ EnterTitle = Enter New Title
 SetTrackWidth = Set Track Width
 SetLocation = Save Location and Size
 AddFastClock = Add Fast Clock
-DefaultTrackColor = Default Track Color
+DefaultTrackColor = Set Default Track Color
 
 # reminder messages
 ReminderTitle = Reminder
@@ -209,9 +209,12 @@ Error2 = Error - Entered value '"{0}"' is not in the allowed range.\nPlease ente
 Error3 = Error in rotation entry:
 Error4 = Error - Physical turnout "{0}" is already linked to a different Panel Turnout.\nPlease enter another turnout name and try again.
 Error5 = Error - You are currently editing this "{0}".\nOnly one editor may be open a the same time.\nPlease cancel or complete that edit and try again.
-Error6 = Error - Sensor "{0}" is already assigned as the occupancy sensor /n of Block "{1}". Please check which is correct before continuing.  
+Error6 = Error - Sensor "{0}" is already assigned as the occupancy sensor \n of Block "{1}". Please check which is correct before continuing.  
 Error7 = Error - Cannot assign occupancy sensor because there\nis no sensor defined for "{0}".\nPlease enter sensor via the Sensor Table and try again.
 Error8 = Error - Cannot assign turnout because there\nis no turnout defined for "{0}".\nPlease enter turnout via the Turnout Table and try again.
+Error9 = Error - Cannot create a signal icon because there is no signal head\ndefined for - "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
+Error10 = Error - Cannot create a sensor icon because no name is entered in the\nSensor Icon field. Please enter the name of a sensor and try again.
+Error11 = Error - Cannot create a memory label because no name is entered in the\nMemory Label field. Please enter the name of a memory variable and try again.
 
 # question messages
 ButtonNo = No
