--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -70,6 +70,7 @@ StateWritingPICV = Writing PI CV{0} ...
 StateWritingSICV = Writing SI CV{0} ...
 StateWritingIndexedCV = Writing Indexed CV{0}.{1} ...
 StateExceptionDuringIndexedWrite = Exception during IndexedCV write: {0}
+StateMultipleMatch = Multiple possible Decoders detected - Manually select from highlighted Decoders or Family
 
 MenuFile = File
 MenuReset = Reset
