--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -10,6 +10,7 @@ Title  = Draw Panel
 MenuPanels    = Panels
 MenuEdit      = Edit
 MenuFile      = File
+MenuTools	  = Tools
 
 # colors
 Black = Black
@@ -144,6 +145,11 @@ Message1Label = Note: Translation occurs before scaling.
 Message2Label = Warning: Scaling and translation cannot be undone.
 ScaleTranslate = Scale/Translate
 ScaleTranslateHint = Click here to translate and/or scale the track diagram.
+TranslateSelection = Translate Selection
+Message3Label = Only items within selection rectangle will be moved.
+MoveSelection = Move Selection
+MoveSelectionHint = Click here to move items within the selection rectangle.
+UndoTranslateSelection = Undo Translate Selection
 
 # help area items
 Help1 = To add an item, check item type, enter needed data, then, with shift down, click on panel - except Track Segment.
@@ -160,6 +166,7 @@ NoBlock = No Block Set
 NoBlock1 = Block 1 Not Set
 NoBlock2 = Block 2 Not Set
 NoTurnout = No Turnout Set
+NotConnected = <Not connected>
 EnterRotation = Enter Rotation Angle ( degrees CW )
 Block1ID = Block 1
 Block2ID = Block 2
@@ -179,6 +186,26 @@ Mainline = Mainline Track
 NotMainline = Side Track
 Hidden = Hidden
 NotHidden = Not Hidden
+Disabled = Disabled
+Momentary = Momentary
+Unknown = <unknown>
+Inconsistent = <inconsistent>
+FontSize = Font size
+FontStyle = Font style
+FontColor = Font color
+Italic = Italic
+Bold = Bold
+Tooltip = Tooltip
+Fixed = Fixed
+WhenClicked = When clicked
+ChangeAspect = change aspect
+AlternateLit = alternate lit
+AlternateHeld = alternate held
+WhenNotLit = When not lit
+ShowAppearance = show appearance
+ShowDarkIcon = show dark icon
+EditLogic = Edit Logic
+SignalLogicFor = Signal Logic for
 
 # option menu items
 Options = Options
@@ -194,6 +221,68 @@ SetLocation = Save Location and Size
 AddFastClock = Add Fast Clock
 DefaultTrackColor = Set Default Track Color
 
+# items specific to Layout Editor tools 
+SignalsAtTurnout = Set Signals at Turnout
+SignalsAtBoundary = Set Signals at Block Boundary
+SignalsAtXoverTurnout = Set Signals at Double Crossover
+SignalsAtLevelXing = Set Signals at Level Crossing
+BlockAtA = Block at A
+BlockAtC = Block at C
+SignalsTurnoutNameHint = Enter name (system or user) of turnout where signals are needed.
+SignalsBlockNameHint = Enter name of one block where signals are needed at block boundary.
+SignalHeads = Signal Heads
+GetSaved = Get Saved
+GetSavedHint = Click to retrieve signal heads previously stored.
+ThroatContinuing = Throat - Continuing
+ThroatDiverging = Throat - Diverging
+Continuing = Continuing
+Diverging = Diverging
+AContinuing = A Corner - Continuing
+ADiverging = A Corner - Diverging
+BContinuing = B Corner - Continuing
+BDiverging = B Corner - Diverging
+CContinuing = C Corner - Continuing
+CDiverging = C Corner - Diverging
+DContinuing = D Corner - Continuing
+DDiverging = D Corner - Diverging
+ATrack = A Connecting Point
+BTrack = B Connecting Point
+CTrack = C Connecting Point
+DTrack = D Connecting Point
+PlaceHead = Add Signal Icon to Panel
+PlaceHeadHint = Check to place icon for above signal head on panel near turnout.
+AnchorPlaceHeadHint = Check to place icon for above signal head on panel near anchor point.
+SetLogic = Set up Logic
+East/SouthBound = East (or South) Bound
+West/NorthBound = West (or North) Bound
+SetLogicHint = Check to set up Simple Signal Logic for above signal head.
+ChangeSignalIcon = Change Signal Icon
+ChangeSignalIconHint = Click to change icons used to represent signal heads. (Use left-facing icons.)
+SignalHeadNameHint = Enter name (system or user) of signal head located here.
+SignalHeadEastNameHint = Enter name (system or user) of signal head for left-bound (east) or down-bound (south) trains.
+SignalHeadWestNameHint = Enter name (system or user) of signal head for right-bound (west) or up-bound (north) trains.
+SignalDoneHint = Click Done to perform tasks requested above and dismiss this dialog.
+SignalsError1 = Error - No turnout name was entered. Please enter a turnout name or cancel.
+SignalsError2 = Error - No turnout is defined for "{0}". Please enter \na turnout name in the Turnout Table and on the panel.
+SignalsError3 = Error - Turnout "{0}" is not drawn on the panel.\nPlease enter the name of a drawn turnout.
+SignalsError4 = Error - Signal head "{0}" does not exist. Please correct name\nor enter this Signal Head in the Signal Table, and try again.
+SignalsError5 = Error - Signal head name was not entered. Please enter\na signal head name for required positions or cancel.
+SignalsError6 = Error - Cannot place signal head "{0}" on the panel\nbecause it is already on the panel.
+SignalsError7 = Error - The two blocks entered do not join at an anchor point.\nPlease enter the correct blocks and try again.
+SignalsError8 = Error - Cannot assign signal head "{0}" to this turnout\nbecause it is already on the panel at a different place.
+SignalsError9 = Error - Block name was not entered. Please\nenter the name of a block on the panel.
+SignalsError10 = Error - Block "{0}" does not exist. Please correct name\nor assign this block to track on the panel.
+SignalsError11 = Error - Block "{0}" exists, but is not\nassigned to track on this panel.
+SignalsError12 = Error - No signal heads entered.\nPlease enter a signal head or cancel.
+SignalsError13 = Error - Cannot assign signal head "{0}" to this block boundary\nbecause it is already on the panel at a different place.
+InfoMessage1 = Sorry, Set Signals at Turnout does\nnot work with double crossover turnouts.
+InfoMessage2 = Sorry, cannot place signal heads at turnouts\nthat are not oriented vertical or horizontal.
+InfoMessage3 = Sorry, cannot place signal heads at anchor points\nwhere track is not oriented vertical or horizontal.
+InfoMessage4 = Cannot set up logic because block "{0}"\ndoesn't have an occupancy sensor.
+InfoMessage5 = Cannot set up logic because the next signal (at\nend of block "{0}") apparently is not defined yet.
+InfoMessage6 = Cannot set up logic because blocks have\nnot been defined around this item.
+InfoMessage7 = Cannot set up logic because all connections\nhave not been defined around this item.
+InfoMessage8 = Sorry, Set Signals at Double Crossover does\nnot work with other types of turnouts.
 # reminder messages
 ReminderTitle = Reminder
 Reminder1 = This panel has been changed.  
@@ -215,6 +304,7 @@ Error8 = Error - Cannot assign turnout because there\nis no turnout defined for 
 Error9 = Error - Cannot create a signal icon because there is no signal head\ndefined for - "{0}". Please enter the name of a Signal Head in\nthe Signal Table and try again.
 Error10 = Error - Cannot create a sensor icon because no name is entered in the\nSensor Icon field. Please enter the name of a sensor and try again.
 Error11 = Error - Cannot create a memory label because no name is entered in the\nMemory Label field. Please enter the name of a memory variable and try again.
+Error12 = Error - Cannot translate selection because no selection has been made.\nPlease select by dragging with the mouse and try again.
 
 # question messages
 ButtonNo = No
