--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -84,6 +84,7 @@ SensorSetHint = Select Active or Inactive depending upon how Sensor is to be set
 LightSetHint = Select On or Off depending upon how Light is to be set
 SignalSetHint = Select Signal Head Appearance to set
 DataHintDelayedSensor = Enter time (seconds) to wait before setting sensor
+DataHintDelayedTurnout = Enter time (seconds) to wait before setting turnout
 DataHintMemory = Enter value Memory is to be set to
 DataHintSound = Enter name of sound file to be played
 DataHintScript = Enter name of script to be run
@@ -138,6 +139,7 @@ ActionSetSignalLit = Set Signal Lit
 ActionTriggerRoute = Trigger Route
 ActionSetSensor = Set Sensor
 ActionDelayedSensor = Delayed Set Sensor 
+ActionDelayedTurnout = Delayed Set Turnout
 ActionSetLight = Set Light
 ActionSetMemory = Set Memory 
 ActionEnableLogix = Enable Logix
@@ -188,6 +190,8 @@ Error34 = Cannot edit two Conditionals at the same time. Please complete edit of
 Error35 = Edit conditional in progress. Please complete edit of Conditional "{0}" and try again.
 Error36 = Sorry, cannot add more Conditionals to this Logix;\n it has the maximum allowed.
 Error37 = Sorry, cannot add more state variables to this conditional;\n it has the maximum allowed.
+Error38 = Unreasonable or missing entry of time to wait for Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error39 = Invalid entry for number of seconds to wait for Delayed Set Turnout action - {0}\nPlease enter number of seconds (digits only), and try again.
 
 WarnTitle = Warning
 ButtonDisabled = Continue Disabled
