--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.9 $ -->
+<!-- Revision $Revision: 1.10 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -289,7 +289,7 @@
            defaultexcludes="yes"
            destdir="${doctarget}"
            additionalparam="-breakiterator"
-           author="false"
+           author="true"
            version="false"
            use="true"
            windowtitle="JMRI API">
