--- a/java/build.xml
+++ b/java/build.xml
@@ -1,8 +1,8 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.10 $ -->
+<!-- Revision $Revision: 1.11 $ -->
 
-<project name="JMRI" default="compile" basedir=".">
+<project name="JMRI" default="debug" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
 <!-- in the project.  We expect that lib et al will be present in -->
 <!-- .. from there -->
@@ -122,7 +122,7 @@
     </javac>
   </target>
 
-  <target name="decoderpro" depends="compile" description="build and run DecoderPro app">
+  <target name="decoderpro" depends="debug" description="build and run DecoderPro app">
     <java classname="apps.DecoderPro.DecoderPro"
           dir=".." 
 	  fork="yes" >
@@ -137,7 +137,7 @@
     </java>
  </target>
 
-  <target name="panelpro" depends="compile" description="build and run PanelPro app">
+  <target name="panelpro" depends="debug" description="build and run PanelPro app">
     <java classname="apps.PanelPro.PanelPro"
           dir=".." 
 	  fork="yes" >
@@ -147,7 +147,7 @@
     </java>
  </target>
 
-  <target name="jmridemo" depends="compile" description="build and run JmriDemo app">
+  <target name="jmridemo" depends="debug" description="build and run JmriDemo app">
     <java classname="apps.JmriDemo.JMRIdemo"
           dir=".."
 	  fork="yes" >
@@ -157,7 +157,7 @@
     </java>
   </target>
 
-  <target name="locotools" depends="compile" description="build and run LocoTools app">
+  <target name="locotools" depends="debug" description="build and run LocoTools app">
     <java classname="apps.LocoTools.LocoTools"
           dir=".." 
 	  fork="yes" >
@@ -167,7 +167,7 @@
     </java>
  </target>
 
-  <target name="cornwall" depends="compile" description="build and run CornwallRR app">
+  <target name="cornwall" depends="debug" description="build and run CornwallRR app">
     <java classname="apps.cornwall.CornwallRR"
           dir=".." 
 	  fork="yes" >
@@ -178,7 +178,7 @@
  </target>
 
   <!-- Force false language/country to check I8N -->
-  <target name="locale" depends="compile" description="check DecoderPro I8N">
+  <target name="locale" depends="debug" description="check DecoderPro I8N">
     <java classname="apps.DecoderPro.DecoderPro"
           dir=".." 
 	  fork="yes" >
@@ -196,7 +196,7 @@
     </java>
   </target>
 
-  <target name="local" depends="compile" description="build and run decoderpro from local config file">
+  <target name="local" depends="debug" description="build and run decoderpro from local config file">
     <java classname="apps.DecoderPro.DecoderPro"
           dir=".." 
 	  fork="yes" >
@@ -207,7 +207,7 @@
     </java>
  </target>
 
-  <target name="faceless" depends="compile" description="build and run faceless app">
+  <target name="faceless" depends="debug" description="build and run faceless app">
     <java classname="apps.FacelessApp"
           dir=".." 
 	  fork="yes" >
@@ -218,14 +218,14 @@
  </target>
 
   <!-- this really doesn't work, as it doesn't hook up stdin right -->
-  <target name="packetpro" depends="compile" description="build and run PacketPro app">
+  <target name="packetpro" depends="debug" description="build and run PacketPro app">
     <exec executable="csh" dir="${jartarget}">
       <arg value="PacketPro.csh"/>
     </exec>
  </target>
 
 
-  <target name="profile" depends="compile" description="build and run JmriDemo app with profiling">
+  <target name="profile" depends="debug" description="build and run JmriDemo app with profiling">
     <java classname="apps.JmriDemo.JMRIdemo"
           dir=".."
 	  fork="yes" >
@@ -235,7 +235,7 @@
     </java>
   </target>
 
-  <target name="alltest" depends="compile, tests" description="build and run test suite">
+  <target name="alltest" depends="debug, tests" description="build and run test suite">
     <java classname="apps.tests.AllTest"
           dir=".." 
 	  fork="yes" >
@@ -322,9 +322,9 @@
   </target>
 
  <!-- dist target forces the jar file to be built without test classes -->
- <target name="dist" depends="clean, init, compile, rmic, jar"
+ <target name="dist" depends="clean, init, debug, rmic, jar"
  		 description="create a distribution jar file"/>
-
+	<echo message="jar built with debug contents"/>
 
 </project>
 
