--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Default properties for the apps package of jmri.
 
@@ -17,6 +17,12 @@ MenuItemPreferences = Preferences...
 
 MenuTools    = Tools
 MenuRoster   = Roster
+
+MenuHelp            = Help
+MenuItemHelp        = Help
+MenuItemLicense     = License ...
+MenuItemLocations   = Locations ...
+MenuItemContext     = Context ...
 
 ButtonQuit = Quit
 
