Add new Layout Editor Tools

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -173,6 +173,7 @@ Block2ID = Block 2
 Block3ID = Block 3
 Block4ID = Block 4
 Remove = Remove
+SetSignals = Set Signals...
 Edit = Edit...
 RHTurnout = Right-Hand Turnout
 LHTurnout = Left-Hand Turnout
@@ -273,8 +274,12 @@ SignalsError8 = Error - Cannot assign signal head "{0}" to this turnout\nbecause
 SignalsError9 = Error - Block name was not entered. Please\nenter the name of a block on the panel.
 SignalsError10 = Error - Block "{0}" does not exist. Please correct name\nor assign this block to track on the panel.
 SignalsError11 = Error - Block "{0}" exists, but is not\nassigned to track on this panel.
-SignalsError12 = Error - No signal heads entered.\nPlease enter a signal head or cancel.
+SignalsError12 = Error - No signal heads entered.\nPlease enter signal heads or cancel.
 SignalsError13 = Error - Cannot assign signal head "{0}" to this block boundary\nbecause it is already on the panel at a different place.
+SignalsError14 = Error - This tool requires signal heads be entered as pairs, A and C,\nand/or B and D. You entered only one head of a pair. 
+SignalsError15 = Error - There are no level crossings on your panel.\nPlease add a level crossing or cancel.
+SignalsError16 = Error - The entered block names match "{0} level crossings.\nPlease enter block names that match only one level crossing.
+SignalsError17 = Error - No level crossing matches the block(s)\nentered. Please try again or cancel.
 InfoMessage1 = Sorry, Set Signals at Turnout does\nnot work with double crossover turnouts.
 InfoMessage2 = Sorry, cannot place signal heads at turnouts\nthat are not oriented vertical or horizontal.
 InfoMessage3 = Sorry, cannot place signal heads at anchor points\nwhere track is not oriented vertical or horizontal.
@@ -283,6 +288,7 @@ InfoMessage5 = Cannot set up logic because the next signal (at\nend of block "{0
 InfoMessage6 = Cannot set up logic because blocks have\nnot been defined around this item.
 InfoMessage7 = Cannot set up logic because all connections\nhave not been defined around this item.
 InfoMessage8 = Sorry, Set Signals at Double Crossover does\nnot work with other types of turnouts.
+SignalsWarn1 = Warning - Logic was set up at signal head "{0}", but no sensors\nto protect for cross traffic at the level crossing were found.
 # reminder messages
 ReminderTitle = Reminder
 Reminder1 = This panel has been changed.  
