--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Default properties for the jmrit.display package
 
@@ -75,4 +75,4 @@ DeleteVerifyTitle = Verify Delete
 ButtonYesDelete = Yes - Delete 
 ButtonNoCancel = No - Cancel
 QuestionA = Are you sure you want to delete this panel, and all displayed icons and track objects?
-QuestionB = (If this panel was loaded, to permanently delete it, select Store Panels... in the Panel menu.)=======
+QuestionB = (If this panel was loaded, to permanently delete it, select Store Panels... in the Panel menu.)
