Layout Editor documentation

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -227,8 +227,8 @@ SignalsAtTurnout = Set Signals at Turnout
 SignalsAtBoundary = Set Signals at Block Boundary
 SignalsAtXoverTurnout = Set Signals at Double Crossover
 SignalsAtLevelXing = Set Signals at Level Crossing
-BlockAtA = Block at A
-BlockAtC = Block at C
+BlockAtA = Block 1
+BlockAtC = Block 2
 SignalsTurnoutNameHint = Enter name (system or user) of turnout where signals are needed.
 SignalsBlockNameHint = Enter name of one block where signals are needed at block boundary.
 SignalHeads = Signal Heads
