Add turntables to Layout Editor

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -99,6 +99,15 @@ EditTurnout = Edit Turnout
 EditXing = Edit Level Crossing
 EditTrackSegment = Edit Track Segment
 EditBlock = Edit Block
+EditTurntable = Edit Turntable
+TurntableRadius = Turntable Radius
+TurntableRadiusHint = Enter radius (screen units) of turntable circle.
+RayAngle = Ray Track Angle
+AddRayTrack = New Ray Track
+DeleteRayTrack = Delete Ray Track
+RayAngleHint = Enter angle of ray track to add or delete (12 o'clock = 0, 3 o'clock = 90 degrees, etc.).
+AddRayTrackHint = Click to add a new ray track at the angle entered above.
+DeleteRayTrackHint = Click to delete the ray track closest to the angle entered above.
 EditTurnoutNameHint = Edit turnout name to change the physical turnout linked to this panel turnout.
 EditBlockNameHint = Edit block name to change the linked block. If new name, block will be created.
 EditBlockBNameHint = Edit this block name to change the block linked to second connecting point.
@@ -207,15 +216,18 @@ ShowAppearance = show appearance
 ShowDarkIcon = show dark icon
 EditLogic = Edit Logic
 SignalLogicFor = Signal Logic for
+Turntable = Turntable
 
 # option menu items
 Options = Options
 EditMode = Edit Mode
 AllowRepositioning = Allow Repositioning
 AllowLayoutControl = Allow Layout Control
+AllowTurnoutAnimation = Allow Turnout Animation
 ShowEditHelp = Show Help Bar in Edit Mode
 NewTitle = New Title
 AddBackground = Add Background Image
+AddTurntable = Add Turntable
 EnterTitle = Enter New Title
 SetTrackWidth = Set Track Width
 SetLocation = Save Location and Size
@@ -311,6 +323,7 @@ Error9 = Error - Cannot create a signal icon because there is no signal head\nde
 Error10 = Error - Cannot create a sensor icon because no name is entered in the\nSensor Icon field. Please enter the name of a sensor and try again.
 Error11 = Error - Cannot create a memory label because no name is entered in the\nMemory Label field. Please enter the name of a memory variable and try again.
 Error12 = Error - Cannot translate selection because no selection has been made.\nPlease select by dragging with the mouse and try again.
+Error13 = Error - Cannot delete a ray track because none are within 30 degrees of the\nentered angle. Please try again with a more precise angle entry.
 
 # question messages
 ButtonNo = No
@@ -320,3 +333,4 @@ WarningTitle = Warning
 Question1 = Are you sure you want to remove this turnout from the panel, along with any connected Track Segments?
 Question2 = Are you sure you want to remove this point from the panel, along with any connected Track Segments?
 Question3 = Are you sure you want to remove this level crossing from the panel, along with any connected Track Segments?
+Question4 = Are you sure you want to remove this turntable from the panel, along with any connected Track Segments?
