Patch 1801688 add LDT signals by Petr Kouda

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,8 +1,20 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.21 $
+# Revision $Revision: 1.22 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
+
+# This file is part of JMRI.
+#
+# JMRI is free software; you can redistribute it and/or modify it under 
+# the terms of version 2 of the GNU General Public License as published 
+# by the Free Software Foundation. See the "COPYING" file for a copy
+# of this license.
+# 
+# JMRI is distributed in the hope that it will be useful, but WITHOUT 
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
+# for more details.
 
 TitleSensorTable  = Sensor Table
 TitleTurnoutTable = Turnout Table
@@ -36,6 +48,7 @@ StringSE8c4aspect  = SE8c 4 aspect
 StringTripleTurnout = Triple Turnout
 StringDoubleTurnout = Double Turnout
 StringVirtual = Virtual
+StringLsDec = LDT LS-DEC
 
 LabelSystemName = System Name:
 LabelUserName   = User Name:
@@ -43,6 +56,10 @@ LabelTurnoutNumber = Turnout number:
 LabelGreenTurnoutNumber  = Green turnout number:
 LabelYellowTurnoutNumber = Yellow turnout number:
 LabelRedTurnoutNumber    = Red turnout number:
+LabelFlashGreenTurnoutNumber  = Flash Green turnout number:
+LabelFlashYellowTurnoutNumber = Flash Yellow turnout number:
+LabelFlashRedTurnoutNumber    = Flash Red turnout number:
+LabelDarkTurnoutNumber    = Dark turnout number:
 
 LightSystemName = Light System Name
 LightSystemNameHint = Enter system name for new Light, e.g. CL1B13
