Ken Cameron contribution

--- a/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
+++ b/jmri/jmrix/nce/clockmon/ClockMonBundle.properties
@@ -1,8 +1,11 @@
 # ClockMonBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the Nce Clock Monitor Pane
+#
+
+
 
 CheckBox24HourFormat    = 24 Hour Format
 
@@ -17,6 +20,11 @@ StopNceClock = Stop NCE Clock
 StartNceClock = Start NCE Clock
 ReadAll = Read All Clock Settings
 TitleNceClockMonitor = NCE clock monitor
+InternalClockStatusBorderText = Internal Clock Status
+NceClockStatusBorderText = NCE Clock Status
+SetClockValuesBorderText = Set Clock Values
+SetClockRatioBorderText = Set Clock Ratio
+SetClock12/24ModeBorderText = Set Clock 12/24 Mode
 LabelTime = Time:
 LabelTimeSep = :
 LabelRatio = Ratio:
@@ -27,6 +35,11 @@ TagPm = PM
 TagRunning = RUNNING
 TagStopped = STOPPED
 
+InterfaceUpdRate = Clock Interface Polling Interval
+InterfaceUpdRateBorderText = Set Polling Speed
+InterfaceUpdRateSufix = Secs
+SetInterfaceUpdRate = Set Update Interval
+
 //Log and Error Messages
 
 LogReplyUnexpected = unexpected response
@@ -35,3 +48,4 @@ LogNceClock1224CmdError = NCE set clock 12/24 replied:
 LogNceClockRatioCmdError = NCE clock ratio cmd replied:
 LogNceClockStopCmdError = NCE clock stop cmd replied:
 LogNceClockStartCmdError = NCE clock start cmd replied:
+LogAlarmTimeIntervalError = reseting pollingInterval, invalid value: 
