--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -83,6 +83,7 @@ TurnoutSetHint = Select Closed or Thrown depending upon how Turnout is to be set
 SensorSetHint = Select Active or Inactive depending upon how Sensor is to be set
 LightSetHint = Select On or Off depending upon how Light is to be set
 SignalSetHint = Select Signal Head Appearance to set
+LockSetHint = Select Lock or Unlock
 DataHintDelayedSensor = Enter time (seconds) to wait before setting sensor
 DataHintDelayedTurnout = Enter time (seconds) to wait before setting turnout
 DataHintMemory = Enter value Memory is to be set to
@@ -146,10 +147,13 @@ ActionEnableLogix = Enable Logix
 ActionDisableLogix = Disable Logix
 ActionPlaySound = Play Sound File
 ActionRunScript = Run Script
+ActionTurnoutLock = Turnout Lock
 ActionTypeHint = Select type of action, or select None if no action is needed.
 
 TurnoutClosed = Closed
 TurnoutThrown = Thrown
+TurnoutUnlock = Unlock
+TurnoutLock = Lock
 SensorActive = Active
 SensorInactive = Inactive
 LightOn = On
