Added error checking in beantables to check for user name already in use.

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.22 $
+# Revision $Revision: 1.23 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -131,6 +131,7 @@ ReminderTitle = Reminder
 
 ReminderInUse = It is in use by {1} other objects.
 DeletePrompt = Are you sure you want to delete {0}?
+WarningUserName = User Name " {0} " has already been used.
 
 WarningTitle = Warning
 
